--- a/index.css
+++ b/index.css
@@ -1,19 +1,7 @@
-body{
-    background-color: black;
-    transition:  all 1s ease-in-out;
+.form,
+.greetings{
+    display: none;
 }
-h1{
-    color: white;
-    transition:  color 1s ease-in-out;
-}
-.btn{
-    cursor: pointer;
-}
-
-.clicked{
-    color:  black;
-}
-
-.back{
-    background-color: white;
+.showing{
+    display: block;
 }
